--- a/4.2-react-simple-webpage/package.json
+++ b/4.2-react-simple-webpage/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "form-registration",
+  "name": "4.2-react-simple-webpage",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
